<resources>
    <string name="app_name">优摩游</string>
    <string name="confirm">确认</string>
    <string name="next">下一步</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_protocal">《用户协议》</string>
    <string name="secret_protocal">《服务协议》</string>
    <string name="getVerifyCoding">正在获取验证码中.....</string>
    <string name="onBinding">正在绑定账号中......</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="register_success">注册成功，欢迎加入爱摩老斯基</string>
    <string name="register_error">注册失败，请重新输入</string>
    <string name="all_picture">所有相片</string>
    <string name="finish">完成</string>
    <string name="password_login">密码登录</string>
    <string name="cancle">取消</string>
    <string name="cong">从 </string>
    <string name="choice_birthday">选择出生年月日</string>
    <string name="male">男</string>
    <string name="atmse">\@我的</string>
    <string name="arrive_end">到达终点 </string>
    <string name="remale">女</string>
    <string name="choice_gender">选择性别</string>
    <string name="choice_city">选择城市</string>
    <string name="teamcode">队伍口令</string>
    <string name="localImg">本地相册</string>
    <string name="opencamera">拍摄</string>
    <string name="editavatar">编辑头像</string>
    <string name="share_notes">分享记录</string>
    <string name="enter_phone_warm">请输入手机号</string>
    <string name="noPassLogin">免密码登录</string>
    <string name="nopasswarm">未注册手机验证后自动登录</string>
    <string name="wx_login">微信登录</string>
    <string name="permisstion_error">获取定位信息权限异常，请前往应用授权页面，重新打开获取应用定位权限！</string>
    <string name="permisstion_empty">应用必要权限缺失，请打开相关权限！</string>
    <string name="login">登录</string>
    <string name="showBottom">打开详细信息</string>
    <string name="register">注册</string>
    <string name="people">人</string>
    <string name="current_total_distance">累计骑行距离</string>
    <string name="current_month_total_distance">本月骑行</string>
    <string name="isRegisterOrno">已经注册过了?</string>
    <string name="isLogin">点此登录</string>
    <string name="login_secretprotocol">注册或登录同意AMOSKI</string>
    <string name="send_note_warm">已发送短信验证码至此号码</string>
    <string name="send_again">重新发送</string>
    <string name="EnterverifyCodeHint">请输入验证码</string>
    <string name="day_name">天</string>
    <string name="EnterPassWordWarm">请输入密码</string>
    <string name="password_enter_warm">密码仅支持数字、英文字母、下划线或者横线</string>
    <string name="passLogin">登录爱摩老斯基</string>
    <string name="new_user_register">新用户注册</string>
    <string name="phonenotEmpty">手机号不能为空</string>
    <string name="EnterPassWordWarmAgain">输入新密码</string>
    <string name="phoneError">手机号错误</string>
    <string name="send_message_warm">短信已发送，请注意查收！</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="loginnamenoEmpty">手机号不能为空！</string>
    <string name="loginpassnoEmpty">用户密码不能为空！</string>
    <string name="http_loading_login">正在登录中，请稍后......</string>
    <string name="loginpassSizeWarm">密码应不少于六位！</string>
    <string name="loginnameError">手机格式错误！请重新输入</string>
    <string name="verifyCodeCanNoEmpty">验证码不能为空！</string>
    <string name="verifyCodeError">验证码错误！</string>
    <string name="change_password">修改密码</string>
    <string name="set_new_password">设置新密码</string>
    <string name="resort">集合地：</string>
    <string name="driver">骑行</string>
    <string name="drivering">骑行中</string>
    <string name="log_fr_bottom_title">2019锡林郭勒草原重机骑行节</string>
    <string name="active_log_fr_bottom_title">锡林郭勒草原重机骑行节</string>
    <string name="log_fr_bottom_content">暨跨境摩旅体验周</string>
    <string name="enter_destination">请输入目的地</string>
    <string name="my_location">我的位置</string>
    <string name="enter_search_content">请输入搜索内容</string>
    <string name="location_select">地图选点</string>
    <string name="all_select">全选</string>
    <string name="set_dauf">恢复默认</string>
    <string name="change_bg">更换背景图</string>
    <string name="destrict">目的地：</string>
    <string name="sponsor">主办方：</string>
    <string name="wx_friend">微信好友</string>
    <string name="wx_pyq">微信朋友圈</string>
    <string name="restore_phone">收藏到相册</string>
    <string name="driver_log">骑行日志</string>
    <string name="total_month_km">月累计(km)</string>
    <string name="total_time">累计用时</string>
    <string name="total_count">累计次数</string>
<string name="focus">关注</string>
    <string name="search_active">搜索活动名称/活动标签</string>
    <string name="fans">粉丝</string>
    <string name="nation_wide">全国</string>
    <string name="local">本地</string>
    <string name="like">赞</string>
    <string name="getlike">获赞</string>
    <string name="empty">""</string>
    <string name="loading_droverlog">正在获取骑行日志中.....</string>
    <string name="network_notAvailable">当前网络不可用！</string>
    <string name="go_there">去这里</string>
    <string name="road_detail">路书详情</string>
    <string name="my_road_book">我的路书</string>
    <string name="my_active">我的活动</string>
    <string name="active">活动</string>
    <string name="dynamics">动态</string>
    <string name="my_ticket">电子票</string>
    <string name="finaly_point">终点</string>
    <string name="nearly">附近</string>
    <string name="way_point">途经点</string>
    <string name="exchange_point">交换位置</string>
    <string name="trends_route">动态轨迹</string>
    <string name="peisu">时速(km/h)</string>
    <string name="user_time">用时</string>
    <string name="discover">发现</string>
    <string name="up_hight">累计爬坡(m)</string>
    <string name="fastest">极速(km/h)</string>
    <string name="yawan">压弯</string>
    <string name="height">海拔</string>
    <string name="hightest">最高海拔</string>
    <string name="today">今天</string>
    <string name="share_my_result">分享我的成绩</string>
    <string name="distance">距离(km)</string>
    <string name="warm">温馨提示</string>
    <string name="setting_account">账号设置</string>
    <string name="choice_year">选择年份</string>
    <string name="record_space_tip">磁盘空间不足！</string>
    <string name="record_time_end_tip">录制结束</string>
    <string name="toEnd">至</string>
    <string name="space">  </string>
    <string name="can_not_record_tip">无法录制</string>
    <string name="record_video_tip">开始录制</string>
    <string name="checked_exception_out">检测到您上一次骑行时异常退出，继续上一次骑行！</string>
    <string name="checked_not_white">检测到您没有设置应用白名单，在骑行过程中关闭屏幕或退到后台有可能会导致定位点获取不准确！</string>
    <string name="ingnore">以后再说</string>
    <string name="myPicture">我的相册</string>
    <string name="picture_collection">相册</string>
    <string name="myCar">我的爱车</string>
    <string name="lovecars">爱车</string>
    <string name="driver_data">骑行数据</string>
    <string name="share_data">分享数据</string>
    <string name="total_drive">累计骑行</string>
    <string name="total_drive_distance">累计骑行距离</string>
    <string name="area_ranking">地区排名</string>
    <string name="country_ranking">国家排名</string>
    <string name="average_speed">平均配速</string>
    <string name="half_year">近半年</string>
    <string name="near_year">近一年</string>
    <string name="avatar">头像</string>
    <string name="enter_introduce_hint">请在此输入简介</string>
    <string name="privateInfo">个人资料</string>
    <string name="nickname">昵称</string>
    <string name="teamname">队名</string>
    <string name="enter_nickname_hint">请在此输入昵称</string>
    <string name="enter_team_name_hint">请在此输入队伍名</string>
    <string name="change_nickname">更改昵称</string>
    <string name="text_number_warm">最长8个中文或16个英文</string>
    <string name="team_text_number_warm">最长10个中文或20个英文</string>
    <string name="renzhenCenter">认证中心</string>
    <string name="my_photo_album">我的相册</string>
    <string name="album">相册</string>
    <string name="name_auth">实名认证</string>
    <string name="no_auth">未认证</string>
    <string name="auth">已认证</string>
    <string name="bond">已绑定</string>
    <string name="no_bond">未绑定</string>
    <string name="week_ranking">骑行排行榜</string>
    <string name="car_bond">车辆绑定</string>
    <string name="auth_center">认证中心</string>
    <string name="click_there">点击此处</string>
    <string name="add_cars">添加车辆</string>
    <string name="add_car">我的车辆</string>
    <string name="bond_car">绑定车辆</string>
    <string name="set_car_name">给爱车取个名字</string>
    <string name="brand_text">品牌系列</string>
    <string name="uncertification">尚未认证</string>
    <string name="certification">认证成功</string>
    <string name="uncertification_warm">您尚未进行实名制，请认证实名信息</string>
    <string name="real_name">真实姓名</string>
    <string name="enter_name_warm">请输入名字</string>
    <string name="shenfenzheng">身份证</string>
    <string name="code_type">证件类型</string>
    <string name="code_number">证件号码</string>
    <string name="begin_certification">开始认证</string>
    <string name="enter_code_warm">请输入身份证号</string>
    <string name="nickname_no_empty">昵称不能为空！！！</string>
    <string name="teamname_no_empty">队名不能为空！！！</string>
    <string name="teamname_not_enough">队名至少为两个中文或4个英文或数字！！！</string>
    <string name="notselectPhoto">未选择任何图片！请选择</string>
    <string name="add_car_content">添加车辆</string>
    <string name="uploading_cars">正在上传车辆信息中......</string>
    <string name="certification_warm">姓名或身份证号不能为空!</string>
    <string name="certification_error">身份证号码错误！</string>
    <string name="certification_checking">正在进行实名认证中......</string>
    <string name="notaddcarName">还没为爱车起名字呢!</string>
    <string name="notaddcarType">您还未设置车型呢！</string>
    <string name="not_car_photo">请上传车辆照片！</string>
    <string name="delete">删除</string>
    <string name="set_default">设为默认</string>
    <string name="isDefaultSelected">当前车辆已是默认车辆！</string>
    <string name="delete_success">删除成功！</string>
    <string name="add_point_text">添加点</string>
    <string name="http_loading">正在加载中...请稍后</string>
    <string name="avatar_warm">头像不能为空！</string>
    <string name="birthday_warm">生日不能为空!</string>
    <string name="gender_warm">性别不能为空！</string>
    <string name="address_warm">地址不能为空！</string>
    <string name="content_warm">个人介绍不能为空！</string>
    <string name="user_bond">账号管理与绑定</string>
    <string name="request_idea">意见反馈</string>
    <string name="water_marker_picture_fail">生成水印图片失败！</string>
    <string name="water_marker_picture_success">生成水印图片成功！</string>
    <string name="deleting">正在删除中......</string>
    <string name="photo_max">超出图片可上传数，一次上传最多9张！</string>
    <string name="exit_login">退出登录</string>
    <string name="user_wx_login">你已使用微信登录</string>
    <string name="phonenumber">手机号</string>
    <string name="changepassword">修改密码</string>
    <string name="change_phone">更换手机号</string>
    <string name="thirdAccount">第三方账号绑定</string>
    <string name="wx">微信</string>
    <string name="user_manager_and_bond">账号管理与绑定</string>
    <string name="other">其他</string>
    <string name="not_user">没有我想要的功能</string>
    <string name="user_not_findly">用起来比较卡</string>
    <string name="always_exit">无故退出不稳定</string>
    <string name="upload_request">正在上传用户反馈！！！</string>
    <string name="get_user_request_opition">正在获取用户反馈项中......</string>
    <string name="select_request_opition">请选择需要反馈的选项！！！</string>
    <string name="request_content_empty">反馈内容不能为空！！！</string>
    <string name="system_notify">系统通知</string>
    <string name="notdata">暂无数据</string>
    <string name="message">消息</string>
    <string name="get_user_info">正在加载用户信息！！！</string>
    <string name="get_photo_info">正在获取相册信息中......</string>
    <string name="upload_photo">正在上传相册......</string>
    <string name="auth_fail">验证失效，请重新登录！！！</string>
    <string name="only_one_car">是否删除最后一台绑定车辆?</string>
    <string name="EnterOldPassword">输入旧密码</string>
    <string name="EnterNewPassword">输入新密码</string>
    <string name="new_password_enter_warm">新密码输入不能为空!</string>
    <string name="bond_account">绑定账号</string>
    <string name="begin_bond">开始绑定</string>
</resources>