<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="usermanager"
            type="com.example.private_module.ViewModel.UserManagerViewModel"></variable>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_theme_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:orientation="vertical"></LinearLayout>

        <include
            layout="@layout/base_tab_layout"
            app:data="@{usermanager.component}"></include>


        <TextView
            android:id="@+id/phone_state"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_50"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/d_15"
            android:text="@string/user_wx_login"
            android:textColor="@color/nomalTextColor"
            android:textSize="@dimen/s_12" />


        <LinearLayout style="@style/UserInfoLinearLayout">

            <TextView
                style="@style/UserInfoTextView"
                android:text="@string/phonenumber" />

            <TextView
                style="@style/UserInfoTextView"
                android:text="@{usermanager.phone}" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d_12"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/manager_changepass"
                    android:layout_width="@dimen/d_64"
                    android:layout_height="@dimen/d_24"
                    android:background="@drawable/little_btn_bg"
                    android:gravity="center"
                    android:onClick="@{usermanager::onClick}"
                    android:text="@string/changepassword"
                    android:textColor="@color/white"
                    android:textSize="@dimen/s_12" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/d_50"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/d_15">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/click_there"
                android:textColor="@color/nomalTextColor"
                android:textSize="@dimen/s_12" />

            <TextView
                android:id="@+id/change_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:onClick="@{usermanager::onClick}"
                android:text="@string/change_phone"
                android:textColor="@color/againSendColor"
                android:textSize="@dimen/s_12" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_50"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/d_15"
            android:text="@string/thirdAccount"
            android:visibility="gone"
            android:textColor="@color/nomalTextColor"
            android:textSize="@dimen/s_12" />


        <LinearLayout style="@style/UserInfoLinearLayout"
            android:visibility="gone">

            <TextView
                style="@style/UserInfoTextView"
                android:text="@string/wx" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/d_15" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>
