<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_10"
        android:text="@string/choice_city"
        android:textColor="@color/blackTextColor"
        android:textSize="@dimen/s_18" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.zyyoona7.picker.OptionsPickerView
            android:id="@+id/contry_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/d_20"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pickerView_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/birthday_dialog_bottom_cancle"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/blackTextColor"
            android:textSize="@dimen/s_15" />

        <TextView
            android:id="@+id/pickerView_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_20"
            android:background="@drawable/birthday_dialog_bottom_ok"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/s_15" />

    </LinearLayout>
</LinearLayout>