<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="change_nickname"
            type="com.example.private_module.ViewModel.ChangeNickNameViewModel"></variable>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_theme_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:orientation="vertical"></LinearLayout>

        <include
            layout="@layout/base_tab_layout"
            app:data="@{change_nickname.component}"></include>

        <LinearLayout
            style="@style/UserInfoLinearLayout"
            android:layout_marginTop="@dimen/d_20">


            <TextView
                style="@style/UserInfoTextView"
                android:text="@string/nickname"></TextView>


            <EditText
                android:id="@+id/nickname_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/d_20"
                android:layout_marginRight="@dimen/d_20"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:hint="@string/enter_nickname_hint"
                android:maxLength="16"
                android:text="@{change_nickname.nickName}"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/s_15" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d_20"
                android:onClick="@{change_nickname::onClick}"
                android:src="@drawable/error_logo" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_15"
            android:layout_marginTop="@dimen/d_20"
            android:text="@string/text_number_warm"
            android:textColor="@color/nomalTextColor"
            android:textSize="@dimen/s_12" />


    </LinearLayout>
</layout>